# ParrotIA

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  app.py  benchmark.py  cli.py  formats.py  pyproject.toml  requirements.txt  run.bat  run.sh  transcriber.py
.github/workflows/: ci.yml  release.yml
src/parrotia/: __init__.py  __main__.py  app.py  benchmark.py  cli.py  formats.py  transcriber.py
tests/: conftest.py  test_app.py  test_benchmark.py  test_cli.py  test_formats.py  test_init.py  test_transcriber.py
